test/visibility/rename/renameUsedMod/renamePrivateUse2.good
renamePrivateUse2.chpl:12: In function 'main':
renamePrivateUse2.chpl:16: error: 'F' undeclared (first use this function)
